--- a/dev/styles/kelvin-style.scss
+++ b/dev/styles/kelvin-style.scss
@@ -119,7 +119,7 @@ body {
    }
 
    .images{
-   width: 45%;
+    width: 45%;
     margin:0 auto;
     justify-content:center;
    }
@@ -243,19 +243,19 @@ body {
    width: 100%;
    height: calc(33.3% - 10px);
    margin-top: 10px;
-<<<<<<< HEAD
+
 }
 
-=======
-   background: url('../../assets/unsplash-writing-desk.jpeg');
-   background-size: cover;
-   background-position: center center;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-}
+
+   // background: url('../../assets/unsplash-writing-desk.jpeg');
+   // background-size: cover;
+   // background-position: center center;
+   // display: flex;
+   // flex-direction: column;
+   // justify-content: center;
+   // align-items: center;
+   // text-align: center;
+
 
 .grid-filter {
    height: 100%;
@@ -267,4 +267,3 @@ body {
    align-items: center;
    text-align: center;
 }
->>>>>>> d90af3d847f505512d4c3ed1ab6609df81b716c8
