--- a/dev/styles/kelvin-style.scss
+++ b/dev/styles/kelvin-style.scss
@@ -108,36 +108,17 @@ body {
    height: calc(70% - 50px);
    top: 50%;
    left: 50%;
-   // text-align: center;
-    // display: flex;
-    // flex-wrap:wrap;
-   // flex-direction: column;
-    // justify-content:space-around;
-   // align-items: center;
+   display: flex;
+   flex-wrap:wrap;
    transform: translate(-50%, -50%);
    background: rgba(0, 0, 0, 0.75);
    opacity: 0;
    z-index: -15;
    color: white;
   
-.blabla{
-   display: flex;
-   flex-wrap:wrap;
-  width: calc(50%-50px);
-   margin-left: 50px;
-   margin-top: 10%;
-
-}
-
-
    .para{
-    // margin-top:10%; 
-   // display:flex;
-   // flex-direction: column;
-   // width:50%;
-
- 
-
+    margin-top:10%; 
+    width:50%;
    }
 
    p{ 
@@ -147,17 +128,15 @@ body {
       line-height: 25px;
    }
 
-
-
    .images{
-    // margin-top:10%; 
-    // width: 50%;
+    margin-top:10%; 
+    width: 50%;
     justify-content:center;
     
    }
    img{
    vertical-align: middle;
-   // width: 45%;
+   width: 45%;
    margin:0 auto;
    display: block;
        
@@ -173,25 +152,16 @@ body {
    }
    }
 
-
-
-
-
    button:hover{
       background-color:#D74F36;
       color: 2E536B;
       transition:1s;
-
-
    }
 
 .book-overlay-fix {
    opacity: 1;
    z-index: 15;
 }
-
-
-
 
 .grid {
    height: 150vh;
